# cosmic-proxy-status

./: .gitignore  Cargo.toml  README.md  flatpak-manifest.json
.cargo/: config.toml
.github/workflows/: flatpak-release.yml
data/: dev.cosmic.ProxyStatus.desktop
src/: app.rs  checker.rs  config.rs  main.rs
