[package]
name = "cosmic-proxy-status"
version = "0.1.0"
edition = "2024"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = ["applet", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
